// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create an InputCell 1`] = `
<input
  className="cell-input"
  id={undefined}
  onChange={[Function]}
  value=""
/>
`;

exports[`Create an empty InputCell 1`] = `
<input
  className="cell-input"
  id={undefined}
  onChange={[Function]}
  value={undefined}
/>
`;
